K3S/tools/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: it-tools
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.10.22-7ca5933
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
