K3S/tools/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-http
  namespace: it-tools
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: it-tools.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools-svc
                port:
                  number: 80
    - host: it-tools.k3s.wiserisk.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools-svc
                port:
                  number: 80
